extends Node2D
var Anims
var EvCount
var Ev
var Dialogue
var Chats
var Shows
var Moves
var Music
var loc_file = ConfigFile.new()
func _ready():
	Dialogue = [ # диалоги. 
		"",
		"5 октября, 12:25. Парк. G",
		"Тёмыч: (Тут никого нет...) B",
		"(И че делать? ...)",
		"MAIN B",
		"Тёмыч: (Домик.)", # 5
		"(Я ставлю сотку, что при удобном случае, Егорыч устроит засаду.)",
		"(Он же мне засаду устроил в *моем* домике?)",
		"(И тут устроит)",
		"EXAM B", 
		"Тёмыч: (Скамейка.)", # 10
		"(Я не стану приседать)",
		"(Зачем, я уже итак сижу...)",
		"(Восьмой класс...)",
		"(Строгач.)",
		"EXAM B",
		"", # 16
		"5 октября, 13:25. Парк. G",
		"Егорыч: Елена Анатольевна, мы здесь! W",
		"Е. Анатольевна: Так, говорите, чего вы меня звали.",
		"Тёмыч: Егогорыч не рассказал?",
		"Е. Анатольевна: Нет. Точнее, может и рассказал, но я не поняла ни слова",
		"Всё что я могу вспомнить, это 'Елена Анатольевна, приходите срочно' и бла-бла-бла.",
		"Тёмыч: (Как Елена Анатольевна запоминает аргументы людей, которые считают, что они не заслуживают двойки по химии) B",
		"Е. Анатольевна: Я внимательно слушаю вас. W",
		"Тёмыч: Хорошо, давайте по-порядку...",
		"MAIN",
		"Тёмыч: Мы нашли в сквере там, слева от тропинки, девочку.", # 27, тело
		"Побитую, без сознания.",
		"Е. Анатольевна: Какой ужас...",
		"В. Юрьевна: Криминал, а?",
		"Тёмыч: (Это - Вера Юрьевна. Классный руководитель Г-класса.) B",
		"(Когда у нас появились школьные суды, стала таким себе 'министром юстиции.')",
		"(Теперь она заправляет всем, что касается судов. Сама по себе она, как судья, выше Лентольны)",
		"В. Юрьевна: Соня, Соня, а подойди, пожалуйста, сюда! W",
		"???: ...",
		"Тёмыч: (Она? Девка из столовки?) B",
		"(Едрить-колотить, если она гуляет с Веръюрьевной, то она явно высокая шишка... Высокая ли?)",
		"В. Юрьевна: Давай, где-то там - сквер, осмотри его. W",
		"???: ...",
		"Тёмыч: Ну, в общем, да. Там - тело без сознания.",
		"Егорыч: Я уже вызвал скорую, её скоро заберут",
		"В. Юрьевна: Правильно сделали.",
		"Е. Анатольевна: ...Лучше бы медсестер из медпункта позвали.",
		"Тёмыч: В общем, да, как-то так.",
		"CHAT",
		"Тёмыч: Елена Анатольевна, кто то был?", # 46, Соня
		"Е. Анатольевна: Ты Веру Юрьевну не знаешь?",
		"Тёмыч: Нет, Веру Юрьевну я знаю.",
		"(Когда рядом стоит учитель, то на него всегда надо ссылаться на имя-отчество) B",
		"(Иначе воспитательных бесед не избежать)",
		"Я говорю про ту девку-- кхм, девочку. W",
		"(За 'девок' тоже можно попасть в бан.) B",
		"(Нужно быть на чеку. Всегда)",
		"Е. Анатольевна: Её зовут Соня Виноградова W",
		"Она недавно стала прокурором",
		"Тёмыч: Ого.",
		"Е. Анатольевна: Причем она очень плёво делает свою работу",
		"Когда Вера Юрьевна её тренировала, у неё с ней был счет 2-2 каждый день",
		"Такой результат был только у тебя, и то, год спустя, когда мы всё-таки сделали школьные суды официальными",
		"Что означает, что тогда у тебя был опыт",
		"В. Юрьевна: Почему я вообще учителем работаю, может мне адвокатом стать?",
		"Тёмыч: Ого...",
		"В. Юрьевна: Кстати, очень вероятно, она пойдет и на это дело.",
		"Тёмыч: Ух ты...",
		"Е. Анатольевна: ...Но, может, надо будет найти другого человеку на роль обвинителя.",
		"Тёмыч: Почему?",
		"Е. Анатольевна: Ну...",
		"Она немая. Полностью.",
		"Тёмыч: Чего, простите?",
		"Е. Анатольевна: Я не знаю, почему,",
		"Но она в принципе не говорит",
		"Я не знаю, может ли она говорить, умеет ли она говорить",
		"Но она не коммуницирует с незнакомыми людьми ни в какой форме в принципе",
		"Даже языком жестов.",
		"Она не общается никак, абсолютно.",
		"Тёмыч: (И этот человек хочет стать кем-то... таким?) B",
		"(Моё уважение.)",
		"Егорыч: Как 'не говорит в принципе-абсолютно'? W",
		"Е. Анатольевна: Может, она будет что-то делать на самом заседании",
		"Но разговаривать вне заседаний если и захотите, то пойдите и купите себе мороженное",
		"Потратьте время на еду, чем нервы на неё.",
		"Тёмыч: ...Учтём.",
		"CHAT",
		"Е. Анатольевна: Бейджик дежурного. Зачем ты его взял с собой?", # 84, значок
		"Тёмыч: Ого! Кто-то таки отреагировал на мой бейджик в этом месте!",
		"Е. Анатольевна: Что, доставал людей своим бейджиком? Я уверяю тебя, если бы ты его показывал хотя бы в два раза меньше, люди бы не игнорировали тебя.",
		"Тёмыч: ...Имеет смысл.",
		"SHOW",
		"Е. Анатольевна: Стой, это же Ира Жарова. Вер, зырь.", # 89, тело
		"В. Юрьевна: От блин! Это же мне придется проставляться под её родителями и полицией *лично*!",
		"Тёмыч: Серьезно? Вы её знаете?",
		"В. Юрьевна: Да. Это Ира Жарова из моего класса, 8-Г.",
		"Тёмыч: Учту...",
		"~~~ Тело обновлено в записях суда B",
		"SHOW",
		"Тёмыч: Это - оружие преступления. Одно из.", # 96, ветка, кастет.
		"В. Юрьевна: Ясно.",
		"Тёмыч: (...Больше мне нечего сказать, думаю.) B",
		"SHOW",
		"",
	]
	Music = [
		"",
		"5 октября, 12:25. Парк. G",
		"Тёмыч: (Тут никого нет...) B",
		"(И че делать? ...)",
		"MAIN B",
		"Тёмыч: (Домик.)", # 5
		"(Я ставлю сотку, что при удобном случае, Егорыч устроит засаду.)",
		"(Он же мне засаду устроил в *моем* домике?)",
		"(И тут устроит)",
		"EXAM B", 
		"Тёмыч: (Скамейка.)", # 10
		"(Я не стану приседать)",
		"(Зачем, я уже итак сижу...)",
		"(Восьмой класс...)",
		"(Строгач.)",
		"EXAM B",
		"", # 16
		"5 октября, 13:25. Парк. G",
		"Егорыч: Елена Анатольевна, мы здесь! W",
		"Е. Анатольевна: Так, говорите, чего вы меня звали.",
		"Тёмыч: Егогорыч не рассказал?",
		"Е. Анатольевна: Нет. Точнее, может и рассказал, но я не поняла ни слова",
		"Всё что я могу вспомнить, это 'Елена Анатольевна, приходите срочно' и бла-бла-бла.",
		"Тёмыч: (Как Елена Анатольевна запоминает аргументы людей, которые считают, что они не заслуживают двойки по химии) B",
		"Е. Анатольевна: Я внимательно слушаю вас. W",
		"Тёмыч: Хорошо, давайте по-порядку...",
		"START investigation_op MAIN",
		"Тёмыч: Мы нашли в сквере там, слева от тропинки, девочку.", # 27, тело
		"Побитую, без сознания.",
		"Е. Анатольевна: Какой ужас...",
		"В. Юрьевна: Криминал, а?",
		"Тёмыч: (Это - Вера Юрьевна. Классный руководитель Г-класса.) B",
		"(Когда у нас появились школьные суды, стала таким себе 'министром юстиции.')",
		"(Теперь она заправляет всем, что касается судов. Сама по себе она, как судья, выше Лентольны)",
		"В. Юрьевна: Соня, Соня, а подойди, пожалуйста, сюда! W",
		"???: ...",
		"Тёмыч: (Она? Девка из столовки?) B",
		"(Едрить-колотить, если она гуляет с Веръюрьевной, то она явно высокая шишка... Высокая ли?)",
		"В. Юрьевна: Давай, где-то там - сквер, осмотри его. W",
		"???: ...",
		"Тёмыч: Ну, в общем, да. Там - тело без сознания.",
		"Егорыч: Я уже вызвал скорую, её скоро заберут",
		"В. Юрьевна: Правильно сделали.",
		"Е. Анатольевна: ...Лучше бы медсестер из медпункта позвали.",
		"Тёмыч: В общем, да, как-то так.",
		"CHAT",
		"Тёмыч: Елена Анатольевна, кто то был?", # 46, Соня
		"Е. Анатольевна: Ты Веру Юрьевну не знаешь?",
		"Тёмыч: Нет, Веру Юрьевну я знаю.",
		"(Когда рядом стоит учитель, то на него всегда надо ссылаться на имя-отчество) B",
		"(Иначе воспитательных бесед не избежать)",
		"Я говорю про ту девку-- кхм, девочку. W",
		"(За 'девок' тоже можно попасть в бан.) B",
		"(Нужно быть на чеку. Всегда)",
		"Е. Анатольевна: Её зовут Соня Виноградова W",
		"Она недавно стала прокурором",
		"Тёмыч: Ого.",
		"Е. Анатольевна: Причем она очень плёво делает свою работу",
		"Когда Вера Юрьевна её тренировала, у неё с ней был счет 2-2 каждый день",
		"Такой результат был только у тебя, и то, год спустя, когда мы всё-таки сделали школьные суды официальными",
		"Что означает, что тогда у тебя был опыт",
		"В. Юрьевна: Почему я вообще учителем работаю, может мне адвокатом стать?",
		"Тёмыч: Ого...",
		"В. Юрьевна: Кстати, очень вероятно, она пойдет и на это дело.",
		"Тёмыч: Ух ты...",
		"Е. Анатольевна: ...Но, может, надо будет найти другого человеку на роль обвинителя.",
		"Тёмыч: Почему?",
		"Е. Анатольевна: Ну...",
		"Она немая. Полностью.",
		"Тёмыч: Чего, простите?",
		"Е. Анатольевна: Я не знаю, почему,",
		"Но она в принципе не говорит",
		"Я не знаю, может ли она говорить, умеет ли она говорить",
		"Но она не коммуницирует с незнакомыми людьми ни в какой форме в принципе",
		"Даже языком жестов.",
		"Она не общается никак, абсолютно.",
		"Тёмыч: (И этот человек хочет стать кем-то... таким?) B",
		"(Моё уважение.)",
		"Егорыч: Как 'не говорит в принципе-абсолютно'? W",
		"Е. Анатольевна: Может, она будет что-то делать на самом заседании",
		"Но разговаривать вне заседаний если и захотите, то пойдите и купите себе мороженное",
		"Потратьте время на еду, чем нервы на неё.",
		"Тёмыч: ...Учтём.",
		"CHAT",
		"Е. Анатольевна: Бейджик дежурного. Зачем ты его взял с собой?", # 84, значок
		"Тёмыч: Ого! Кто-то таки отреагировал на мой бейджик в этом месте!",
		"Е. Анатольевна: Что, доставал людей своим бейджиком? Я уверяю тебя, если бы ты его показывал хотя бы в два раза меньше, люди бы не игнорировали тебя.",
		"Тёмыч: ...Имеет смысл.",
		"SHOW",
		"Е. Анатольевна: Стой, это же Ира Жарова. Вер, зырь.", # 89, тело
		"В. Юрьевна: От блин! Это же мне придется проставляться под её родителями и полицией *лично*!",
		"Тёмыч: Серьезно? Вы её знаете?",
		"В. Юрьевна: Да. Это Ира Жарова из моего класса, 8-Г.",
		"Тёмыч: Учту...",
		"~~~ Тело обновлено в записях суда B",
		"SHOW",
		"Тёмыч: Это - оружие преступления. Одно из.", # 96, ветка, кастет.
		"В. Юрьевна: Ясно.",
		"Тёмыч: (...Больше мне нечего сказать, думаю.) B",
		"SHOW",
		"",
	]
	Anims = [ # массив, в котором 1 слово это перс, а 2 - его анимка
		"",
		"5 октября, 12:25. Парк. G",
		"Тёмыч: (Тут никого нет...) B",
		"(И че делать? ...)",
		"MAIN B",
		"Тёмыч: (Домик.)", # 5
		"(Я ставлю сотку, что при удобном случае, Егорыч устроит засаду.)",
		"(Он же мне засаду устроил в *моем* домике?)",
		"(И тут устроит)",
		"EXAM B", 
		"Тёмыч: (Скамейка.)", # 10
		"(Я не стану приседать)",
		"(Зачем, я уже итак сижу...)",
		"(Восьмой класс...)",
		"(Строгач.)",
		"EXAM B",
		"", # 16
		"5 октября, 13:25. Парк. G",
		"character_lentoln SHOW Егорыч: Елена Анатольевна, мы здесь! W",
		"character_lentoln hmm Е. Анатольевна: Так, говорите, чего вы меня звали.",
		"Тёмыч: Егогорыч не рассказал?",
		"character_lentoln kek Е. Анатольевна: Нет. Точнее, может и рассказал, но я не поняла ни слова",
		"character_lentoln hmm Всё что я могу вспомнить, это 'Елена Анатольевна, приходите срочно' и бла-бла-бла.",
		"Тёмыч: (Как Елена Анатольевна запоминает аргументы людей, которые считают, что они не заслуживают двойки по химии) B",
		"Е. Анатольевна: Я внимательно слушаю вас. W",
		"Тёмыч: Хорошо, давайте по-порядку...",
		"MAIN",
		"character_sonya death Тёмыч: Мы нашли в сквере там, слева от тропинки, девочку.", # 27, тело
		"character_werur hmm Побитую, без сознания.",
		"character_lentoln omg Е. Анатольевна: Какой ужас...",
		"character_werur SHOW В. Юрьевна: Криминал, а?",
		"character_lentoln HIDE Тёмыч: (Это - Вера Юрьевна. Классный руководитель Г-класса.) B",
		"character_werur default (Когда у нас появились школьные суды, стала таким себе 'министром юстиции.')",
		"(Теперь она заправляет всем, что касается судов. Сама по себе она, как судья, выше Лентольны)",
		"В. Юрьевна: Соня, Соня, а подойди, пожалуйста, сюда! W",
		"character_sonya SHOW ???: ...",
		"Тёмыч: (Она? Девка из столовки?) B",
		"(Едрить-колотить, если она гуляет с Веръюрьевной, то она явно высокая шишка... Высокая ли?)",
		"character_werur SHOW В. Юрьевна: Давай, где-то там - сквер, осмотри его. W",
		"character_sonya SHOW ???: ...",
		"character_lentoln hmm Тёмыч: Ну, в общем, да. Там - тело без сознания.",
		"character_egorich SHOW Егорыч: Я уже вызвал скорую, её скоро заберут",
		"character_werur SHOW В. Юрьевна: Правильно сделали.",
		"character_lentoln SHOW Е. Анатольевна: ...Лучше бы медсестер из медпункта позвали.",
		"Тёмыч: В общем, да, как-то так.",
		"CHAT",
		"character_lentoln SHOW Тёмыч: Елена Анатольевна, кто то был?", # 46, Соня
		"Е. Анатольевна: Ты Веру Юрьевну не знаешь?",
		"Тёмыч: Нет, Веру Юрьевну я знаю.",
		"character_lentoln kek (Когда рядом стоит учитель, то на него всегда надо ссылаться на имя-отчество) B",
		"character_lentoln default (Иначе воспитательных бесед не избежать)",
		"Я говорю про ту девку-- кхм, девочку. W",
		"character_lentoln kek (За 'девок' тоже можно попасть в бан.) B",
		"(Нужно быть на чеку. Всегда)",
		"character_lentoln default Е. Анатольевна: Её зовут Соня Виноградова W",
		"Она недавно стала прокурором",
		"Тёмыч: Ого.",
		"Е. Анатольевна: Причем она очень плёво делает свою работу",
		"character_lentoln kek Когда Вера Юрьевна её тренировала, у неё с ней был счет 2-2 каждый день",
		"Такой результат был только у тебя, и то, год спустя, когда мы всё-таки сделали школьные суды официальными",
		"character_werur default Что означает, что тогда у тебя был опыт",
		"character_werur SHOW В. Юрьевна: Почему я вообще учителем работаю, может мне адвокатом стать?",
		"Тёмыч: Ого...",
		"character_werur hmm В. Юрьевна: Кстати, очень вероятно, она пойдет и на это дело.",
		"character_lentoln hmm Тёмыч: Ух ты...",
		"character_lentoln SHOW Е. Анатольевна: ...Но, может, надо будет найти другого человеку на роль обвинителя.",
		"Тёмыч: Почему?",
		"Е. Анатольевна: Ну...",
		"Она немая. Полностью.",
		"Тёмыч: Чего, простите?",
		"Е. Анатольевна: Я не знаю, почему,",
		"Но она в принципе не говорит",
		"Я не знаю, может ли она говорить, умеет ли она говорить",
		"Но она не коммуницирует с незнакомыми людьми ни в какой форме в принципе",
		"Даже языком жестов.",
		"Она не общается никак, абсолютно.",
		"Тёмыч: (И этот человек хочет стать кем-то... таким?) B",
		"character_egorich all_of_sudden (Моё уважение.)",
		"character_egorich SHOW Егорыч: Как 'не говорит в принципе-абсолютно'? W",
		"character_lentoln SHOW Е. Анатольевна: Может, она будет что-то делать на самом заседании",
		"character_lentoln default Но разговаривать вне заседаний если и захотите, то пойдите и купите себе мороженное",
		"Потратьте время на еду, чем нервы на неё.",
		"Тёмыч: ...Учтём.",
		"CHAT",
		"character_lentoln hmm Е. Анатольевна: Бейджик дежурного. Зачем ты его взял с собой?", # 84, значок
		"Тёмыч: Ого! Кто-то таки отреагировал на мой бейджик в этом месте!",
		"character_lentoln default Е. Анатольевна: Что, доставал людей своим бейджиком? Я уверяю тебя, если бы ты его показывал хотя бы в два раза меньше, люди бы не игнорировали тебя.",
		"Тёмыч: ...Имеет смысл.",
		"SHOW",
		"character_lentoln omg Е. Анатольевна: Стой, это же Ира Жарова. Вер, зырь.", # 89, тело
		"character_werur SHOW В. Юрьевна: От блин! Это же мне придется проставляться под её родителями и полицией *лично*!",
		"Тёмыч: Серьезно? Вы её знаете?",
		"character_werur hmm В. Юрьевна: Да. Это Ира Жарова из моего класса, 8-Г.",
		"Тёмыч: Учту...",
		"~~~ Тело обновлено в записях суда B",
		"SHOW",
		"character_werur SHOW Тёмыч: Это - оружие преступления. Одно из.", # 96, ветка, кастет.
		"character_werur hmm В. Юрьевна: Ясно.",
		"character_lentoln SHOW Тёмыч: (...Больше мне нечего сказать, думаю.) B",
		"SHOW",
		"",
	]
	Ev = [
		"",
		"5 октября, 12:25. Парк. G",
		"Тёмыч: (Тут никого нет...) B",
		"(И че делать? ...)",
		"MAIN B",
		"Тёмыч: (Домик.)", # 5
		"(Я ставлю сотку, что при удобном случае, Егорыч устроит засаду.)",
		"(Он же мне засаду устроил в *моем* домике?)",
		"(И тут устроит)",
		"EXAM B", 
		"Тёмыч: (Скамейка.)", # 10
		"(Я не стану приседать)",
		"(Зачем, я уже итак сижу...)",
		"(Восьмой класс...)",
		"(Строгач.)",
		"EXAM B",
		"", # 16
		"5 октября, 13:25. Парк. G",
		"Егорыч: Елена Анатольевна, мы здесь! W",
		"Е. Анатольевна: Так, говорите, чего вы меня звали.",
		"Тёмыч: Егогорыч не рассказал?",
		"Е. Анатольевна: Нет. Точнее, может и рассказал, но я не поняла ни слова",
		"Всё что я могу вспомнить, это 'Елена Анатольевна, приходите срочно' и бла-бла-бла.",
		"Тёмыч: (Как Елена Анатольевна запоминает аргументы людей, которые считают, что они не заслуживают двойки по химии) B",
		"Е. Анатольевна: Я внимательно слушаю вас. W",
		"Тёмыч: Хорошо, давайте по-порядку...",
		"MAIN",
		"Тёмыч: Мы нашли в сквере там, слева от тропинки, девочку.", # 27, тело
		"Побитую, без сознания.",
		"Е. Анатольевна: Какой ужас...",
		"В. Юрьевна: Криминал, а?",
		"Тёмыч: (Это - Вера Юрьевна. Классный руководитель Г-класса.) B",
		"(Когда у нас появились школьные суды, стала таким себе 'министром юстиции.')",
		"(Теперь она заправляет всем, что касается судов. Сама по себе она, как судья, выше Лентольны)",
		"В. Юрьевна: Соня, Соня, а подойди, пожалуйста, сюда! W",
		"???: ...",
		"Тёмыч: (Она? Девка из столовки?) B",
		"(Едрить-колотить, если она гуляет с Веръюрьевной, то она явно высокая шишка... Высокая ли?)",
		"В. Юрьевна: Давай, где-то там - сквер, осмотри его. W",
		"???: ...",
		"Тёмыч: Ну, в общем, да. Там - тело без сознания.",
		"Егорыч: Я уже вызвал скорую, её скоро заберут",
		"В. Юрьевна: Правильно сделали.",
		"Е. Анатольевна: ...Лучше бы медсестер из медпункта позвали.",
		"Тёмыч: В общем, да, как-то так.",
		"CHAT",
		"Тёмыч: Елена Анатольевна, кто то был?", # 46, Соня
		"Е. Анатольевна: Ты Веру Юрьевну не знаешь?",
		"Тёмыч: Нет, Веру Юрьевну я знаю.",
		"(Когда рядом стоит учитель, то на него всегда надо ссылаться на имя-отчество) B",
		"(Иначе воспитательных бесед не избежать)",
		"Я говорю про ту девку-- кхм, девочку. W",
		"(За 'девок' тоже можно попасть в бан.) B",
		"(Нужно быть на чеку. Всегда)",
		"Е. Анатольевна: Её зовут Соня Виноградова W",
		"Она недавно стала прокурором",
		"Тёмыч: Ого.",
		"Е. Анатольевна: Причем она очень плёво делает свою работу",
		"Когда Вера Юрьевна её тренировала, у неё с ней был счет 2-2 каждый день",
		"Такой результат был только у тебя, и то, год спустя, когда мы всё-таки сделали школьные суды официальными",
		"Что означает, что тогда у тебя был опыт",
		"В. Юрьевна: Почему я вообще учителем работаю, может мне адвокатом стать?",
		"Тёмыч: Ого...",
		"В. Юрьевна: Кстати, очень вероятно, она пойдет и на это дело.",
		"Тёмыч: Ух ты...",
		"Е. Анатольевна: ...Но, может, надо будет найти другого человеку на роль обвинителя.",
		"Тёмыч: Почему?",
		"Е. Анатольевна: Ну...",
		"Она немая. Полностью.",
		"Тёмыч: Чего, простите?",
		"Е. Анатольевна: Я не знаю, почему,",
		"Но она в принципе не говорит",
		"Я не знаю, может ли она говорить, умеет ли она говорить",
		"Но она не коммуницирует с незнакомыми людьми ни в какой форме в принципе",
		"Даже языком жестов.",
		"Она не общается никак, абсолютно.",
		"Тёмыч: (И этот человек хочет стать кем-то... таким?) B",
		"(Моё уважение.)",
		"Егорыч: Как 'не говорит в принципе-абсолютно'? W",
		"Е. Анатольевна: Может, она будет что-то делать на самом заседании",
		"Но разговаривать вне заседаний если и захотите, то пойдите и купите себе мороженное",
		"Потратьте время на еду, чем нервы на неё.",
		"Тёмыч: ...Учтём.",
		"CHAT",
		"Е. Анатольевна: Бейджик дежурного. Зачем ты его взял с собой?", # 84, значок
		"Тёмыч: Ого! Кто-то таки отреагировал на мой бейджик в этом месте!",
		"Е. Анатольевна: Что, доставал людей своим бейджиком? Я уверяю тебя, если бы ты его показывал хотя бы в два раза меньше, люди бы не игнорировали тебя.",
		"Тёмыч: ...Имеет смысл.",
		"SHOW",
		"Е. Анатольевна: Стой, это же Ира Жарова. Вер, зырь.", # 89, тело
		"В. Юрьевна: От блин! Это же мне придется проставляться под её родителями и полицией *лично*!",
		"Тёмыч: Серьезно? Вы её знаете?",
		"В. Юрьевна: Да. Это Ира Жарова из моего класса, 8-Г.",
		"Тёмыч: Учту...",
		"2/body/Ира Жарова, жертва избиения неустановленным лицом. Травмы: колотая рана в грудь, синяки и переломы./1",
		"SHOW",
		"Тёмыч: Это - оружие преступления. Одно из.", # 96, ветка, кастет.
		"В. Юрьевна: Ясно.",
		"Тёмыч: (...Больше мне нечего сказать, думаю.) B",
		"SHOW",
		"",
	]
	Chats = [ # массив, в котором все, кроме последних 3 *БУКВ* - названия кнопок, а последние 3 буквы - номер строки
		"Кто это?   46",
		"Сквер...   27",
		"",
		"",
	]
	Moves = [ # массив с названиями кнопок перехода и целью куда они переводят
		"Столовая res://scenes/case_2/mess_day1.tscn",
		"Сквер res://scenes/case_2/crime_day1.tscn",
		"",
		"",
	]
	Shows = [ # массив, в котором первое слово - улика, а 2 - номер строки, на который перекинет игрока, если ее показать
		"badge 84",
		"body 89",
		"branch 96",
		"knucklebuster 96",
	]
	# СУКА БЛЯТЬ НЕ ТРОГАЙ ЭТО ГАНДОН НЕДОШТОПАННЫЙ АААААА*АААААААААААААААААА!!!!!!!!!!!!!!!!!!!!!!!!
	
	for i in range(1,4):
		if Chats[i-1] != "":
			get_node("chat_"+str(i)).text = Chats[i-1].left(Chats[i-1].length()-3)
	for i in range(1,4):
		if Moves[i-1] != "":
			get_node("move_"+str(i)).text = Moves[i-1].left(Moves[i-1].length()-Moves[i-1].split(" ")[-1].length())
	print(Chats[0].split(" ")[-1])
	
	
	
	loc_file.load("C:/Games/ddkg2.save")
	if str(loc_file.get_value("Locations",str(filename))) == "1":
		if loc_file.get_value("Locations","res://scenes/investigation.tscnchecked") == "1":
			$investigation_screen.Cur = 16
		else: 
			$investigation_screen.Cur = 2




func _on_chat_1_pressed():
	if $investigation_screen.State == "Chat" and Chats[0] != "":
		$investigation_screen.State = "Dialogue"
		loc_file.set_value("Locations",filename+"checked","1")
		loc_file.save("C:/Games/ddkg2.save")
		$investigation_screen.Cur = int(Chats[0].split(" ")[-1])
		$investigation_screen/show_text.text = Dialogue[$investigation_screen.Cur]


func _on_chat_2_pressed():
	if $investigation_screen.State == "Chat" and Chats[1] != "":
		$investigation_screen.State = "Dialogue"
		$investigation_screen.Cur = int(Chats[1].split(" ")[-1])
		$investigation_screen/show_text.text = Dialogue[$investigation_screen.Cur]


func _on_chat_3_pressed():
	if $investigation_screen.State == "Chat" and Chats[2] != "":
		$investigation_screen.State = "Dialogue"
		$investigation_screen.Cur = int(Chats[2].split(" ")[-1])
		$investigation_screen/show_text.text = Dialogue[$investigation_screen.Cur]


func _on_chat_4_pressed():
	if $investigation_screen.State == "Chat" and Chats[3] != "":
		$investigation_screen.State = "Dialogue"
		$investigation_screen.Cur = int(Chats[3].split(" ")[-1])
		$investigation_screen/show_text.text = Dialogue[$investigation_screen.Cur]


func _on_move_1_pressed():
	if $investigation_screen.State == "Move" and Moves[0] != "":
		get_tree().change_scene(Moves[0].split(" ")[-1])


func _on_move_2_pressed():
	if $investigation_screen.State == "Move" and Moves[1] != "":
		get_tree().change_scene(Moves[1].split(" ")[-1])


func _on_move_3_pressed():
	if $investigation_screen.State == "Move" and Moves[2] != "":
		get_tree().change_scene(Moves[2].split(" ")[-1])

func _on_move_4_pressed():
	if $investigation_screen.State == "Move" and Moves[3] != "":
		get_tree().change_scene(Moves[3].split(" ")[-1])


func _on_poi_mouse_exited():
	$investigation_screen/crosshair.animation = "default"


func _on_poi_1_pressed():
	if $investigation_screen.State == "Examine":
		$investigation_screen.State = "Dialogue"
		$investigation_screen.Cur = int($poi_1.text)
		$investigation_screen/show_text.text = Dialogue[$investigation_screen.Cur]
		$investigation_screen.Checked[1] = true


func _on_poi_1_mouse_entered():
	if $investigation_screen.State == "Examine":
		if $investigation_screen.Checked[1] == false:
			$investigation_screen/crosshair.animation = "wut"
		else:
			$investigation_screen/crosshair.animation = "gotchu"


func _on_poi_2_mouse_entered():
	if $investigation_screen.State == "Examine":
		if $investigation_screen.Checked[2] == false:
			$investigation_screen/crosshair.animation = "wut"
		else:
			$investigation_screen/crosshair.animation = "gotchu"


func _on_poi_2_pressed():
	if $investigation_screen.State == "Examine":
		$investigation_screen.State = "Dialogue"
		$investigation_screen.Cur = int($poi_2.text)
		$investigation_screen/show_text.text = Dialogue[$investigation_screen.Cur]
		$investigation_screen.Checked[2] = true


func _on_poi_3_mouse_entered():
	if $investigation_screen.State == "Examine":
		if $investigation_screen.Checked[3] == false:
			$investigation_screen/crosshair.animation = "wut"
		else:
			$investigation_screen/crosshair.animation = "gotchu"


func _on_poi_3_pressed():
	if $investigation_screen.State == "Examine":
		$investigation_screen.State = "Dialogue"
		$investigation_screen.Cur = int($poi_3.text)
		$investigation_screen/show_text.text = Dialogue[$investigation_screen.Cur]
		$investigation_screen.Checked[3] = true


func _on_poi_4_mouse_entered():
	if $investigation_screen.State == "Examine":
		if $investigation_screen.Checked[4] == false:
			$investigation_screen/crosshair.animation = "wut"
		else:
			$investigation_screen/crosshair.animation = "gotchu"


func _on_poi_4_pressed():
	if $investigation_screen.State == "Examine":
		$investigation_screen.State = "Dialogue"
		$investigation_screen.Cur = int($poi_4.text)
		$investigation_screen/show_text.text = Dialogue[$investigation_screen.Cur]
		$investigation_screen.Checked[4] = true



func _on_verif_timeout():
	print("shitfuck")
	loc_file.set_value("Locations",str(filename),"1")
	loc_file.save("C:/Games/ddkg2.save")
